@@ -307,6 +307,9 @@ class MMFilesCollection final : public PhysicalCollection {
 
   Result truncate(transaction::Methods* trx, OperationOptions&) override;
 
+  /// @brief compact-data operation
+  Result compact() override;
+
   /// @brief Defer a callback to be executed when the collection
   ///        can be dropped. The callback is supposed to drop
   ///        the collection and it is guaranteed that no one is using
