@@ -351,24 +351,39 @@ void RestCollectionHandler::handleCommandPut() {
                                  /*showFigures*/ false, /*showCount*/ false,
                                  /*detailedCount*/ true);
       }
-    } else if (sub == "truncate") {
-      OperationOptions opts;
-
-      opts.waitForSync = _request->parsedValue("waitForSync", false);
-      opts.isSynchronousReplicationFrom =
-          _request->value("isSynchronousReplication");
-
-      auto ctx = transaction::StandaloneContext::Create(_vocbase);
-      SingleCollectionTransaction trx(ctx, *coll, AccessMode::Type::EXCLUSIVE);
-      trx.addHint(transaction::Hints::Hint::INTERMEDIATE_COMMITS);
-      trx.addHint(transaction::Hints::Hint::ALLOW_RANGE_DELETE);
-      res = trx.begin();
-
+    } else if (sub == "compact") {
+      res = coll->compact();
+      
       if (res.ok()) {
-        auto result = trx.truncate(coll->name(), opts);
-
-        res = trx.finish(result.result);
+        collectionRepresentation(builder, name, /*showProperties*/ false,
+                                 /*showFigures*/ false, /*showCount*/ false,
+                                 /*detailedCount*/ true);
       }
+    } else if (sub == "truncate") {
+      {
+        OperationOptions opts;
+
+        opts.waitForSync = _request->parsedValue("waitForSync", false);
+        opts.isSynchronousReplicationFrom =
+            _request->value("isSynchronousReplication");
+
+        auto ctx = transaction::StandaloneContext::Create(_vocbase);
+        SingleCollectionTransaction trx(ctx, *coll, AccessMode::Type::EXCLUSIVE);
+        trx.addHint(transaction::Hints::Hint::INTERMEDIATE_COMMITS);
+        trx.addHint(transaction::Hints::Hint::ALLOW_RANGE_DELETE);
+        res = trx.begin();
+
+        if (res.ok()) {
+          auto result = trx.truncate(coll->name(), opts);
+
+          res = trx.finish(result.result);
+        }
+      }
+      // wait for the transaction to finish first. only after that compact the
+      // data range(s) for the collection
+      // we shouldn't run compact() as part of the transaction, because the compact
+      // will be useless inside due to the snapshot the transaction has taken
+      coll->compact();
 
       if (res.ok()) {
         if (ServerState::instance()->isCoordinator()) {  // ClusterInfo::loadPlan eventually updates status
@@ -424,7 +439,7 @@ void RestCollectionHandler::handleCommandPut() {
       if (res.is(TRI_ERROR_NOT_IMPLEMENTED)) {
         res.reset(TRI_ERROR_HTTP_NOT_FOUND,
                   "expecting one of the actions 'load', 'unload', 'truncate',"
-                  " 'properties', 'rename', 'loadIndexesIntoMemory'");
+                  " 'properties', 'compact', 'rename', 'loadIndexesIntoMemory'");
       }
     }
   });
