@@ -590,10 +590,6 @@ Result RocksDBCollection::truncate(transaction::Methods* trx, OperationOptions& 
 
     guard.fire();  // remove blocker
 
-    if (numDocs > 64 * 1024) {
-      // also compact the ranges in order to speed up all further accesses
-      compact();
-    }
     TRI_ASSERT(!state->hasOperations());  // not allowed
     return Result{};
   }
@@ -659,11 +655,6 @@ Result RocksDBCollection::truncate(transaction::Methods* trx, OperationOptions& 
   // reset to previous value after truncate is finished
   state->options().intermediateCommitCount = prvICC;
 
-  if (found > 64 * 1024) {
-    // also compact the ranges in order to speed up all further accesses
-    compact();
-  }
-
 #ifdef ARANGODB_ENABLE_MAINTAINER_MODE
   if (state->numCommits() == 0) {
     // check IN TRANSACTION if documents have been deleted
@@ -682,7 +673,7 @@ Result RocksDBCollection::truncate(transaction::Methods* trx, OperationOptions& 
   }
   return Result{};
 }
-
+  
 LocalDocumentId RocksDBCollection::lookupKey(transaction::Methods* trx,
                                              VPackSlice const& key) const {
   TRI_ASSERT(key.isString());
@@ -1738,7 +1729,7 @@ uint64_t RocksDBCollection::recalculateCounts() {
   return numberDocuments();
 }
 
-void RocksDBCollection::compact() {
+Result RocksDBCollection::compact() {
   rocksdb::TransactionDB* db = rocksutils::globalRocksDB();
   rocksdb::CompactRangeOptions opts;
   RocksDBKeyBounds bounds = RocksDBKeyBounds::CollectionDocuments(_objectId);
@@ -1750,6 +1741,8 @@ void RocksDBCollection::compact() {
     RocksDBIndex* index = static_cast<RocksDBIndex*>(i.get());
     index->cleanup();
   }
+
+  return {};
 }
 
 void RocksDBCollection::estimateSize(velocypack::Builder& builder) {
