@@ -128,7 +128,10 @@ class PhysicalCollection {
   // -- SECTION DML Operations --
   ///////////////////////////////////
 
-  virtual Result truncate(transaction::Methods* trx, OperationOptions&) = 0;
+  virtual Result truncate(transaction::Methods* trx, OperationOptions& options) = 0;
+  
+  /// @brief compact-data operation
+  virtual Result compact() = 0;
 
   /// @brief Defer a callback to be executed when the collection
   ///        can be dropped. The callback is supposed to drop
