@@ -267,7 +267,10 @@ class LogicalCollection : public LogicalDataSource {
               ManagedDocumentResult& result, bool lock);
 
   /// @brief processes a truncate operation
-  Result truncate(transaction::Methods* trx, OperationOptions&);
+  Result truncate(transaction::Methods* trx, OperationOptions& options);
+  
+  /// @brief compact-data operation
+  Result compact();
 
   // convenience function for downwards-compatibility
   Result insert(transaction::Methods* trx, velocypack::Slice const slice,
